authentication fixed