@@ -7,6 +7,7 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.oauth2.jose.jws.SignatureAlgorithm;
@@ -14,28 +15,26 @@ import org.springframework.security.oauth2.jwt.JwtDecoder;
 import org.springframework.security.oauth2.jwt.NimbusJwtDecoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.www.BasicAuthenticationFilter;
+import org.springframework.security.web.util.matcher.AntPathRequestMatcher;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfiguration {
-    //    @Bean
-    JwtDecoder jwtDecoder() {
-        return NimbusJwtDecoder.withIssuerLocation("https://idp.example.com/issuer")
-                .jwsAlgorithm(SignatureAlgorithm.RS256).build();
-    }
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http.sessionManagement(management ->
                         management.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(authorize -> authorize
-                                .requestMatchers("/login").permitAll()
-                                .requestMatchers("/register").permitAll()
+                                .requestMatchers("/users/login").permitAll()
+                                .requestMatchers("/users/register").permitAll()
+                                .requestMatchers(new AntPathRequestMatcher("**/admin-panel/**")).hasRole("ADMIN")
                                 .anyRequest().authenticated()
 //                        .anyRequest().permitAll()
                 )
@@ -51,13 +50,13 @@ public class SecurityConfiguration {
             public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
                 CorsConfiguration ccfg = new CorsConfiguration();
                 ccfg.setAllowedOrigins(Arrays.asList("http://localhost:3000"));
-                ccfg.setAllowedMethods(Collections.singletonList("*"));
+//                ccfg.setAllowedMethods(Collections.singletonList("*"));
+                ccfg.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE"));
                 ccfg.setAllowCredentials(true);
                 ccfg.setAllowedHeaders(Collections.singletonList("*"));
                 ccfg.setExposedHeaders(Arrays.asList("Authorization"));
                 ccfg.setMaxAge(3600L);
                 return ccfg;
-
             }
         };
     }
